--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
   </head>
 
   <body>
-  
+
+    <div class="test">начало</div> 
+
     <div id="root"></div>
+
+    <div class="test">кончало</div> 
 
       
     <script type="module" src="/src/index.tsx"></script>
