dev1_WD0LV-4_0204

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   
     <div id="root"></div>
 
-    <div class="test">кончало</div>
+    <div class="test">конец</div>
 
       
     <script type="module" src="/src/index.tsx"></script>
