--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 
   <body>
 
-    
+    <div class="test">начало</div>
   
     <div id="root"></div>
 
-  
+    <div class="test">конец</div>
 
       
     <script type="module" src="/src/index.tsx"></script>
